--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/venv,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=venv,python
-
+### obsidian ###
+.obsidian
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
