--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+.idea
+.vscode
 # Created by https://www.toptal.com/developers/gitignore/api/venv,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=venv,python
 ### obsidian ###
