--- a/.gitignore
+++ b/.gitignore
@@ -640,3 +640,12 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
+
+
+# Created by https://www.toptal.com/developers/gitignore/api/remix+netlify
+# Edit at https://www.toptal.com/developers/gitignore?templates=remix+netlify
+
+### Remix+Netlify ###
+/.netlify
+
+# End of https://www.toptal.com/developers/gitignore/api/remix+netlify
