--- a/.gitignore
+++ b/.gitignore
@@ -442,7 +442,7 @@ web_modules/
 
 # Yarn Integrity file
 .yarn-integrity
-
+.conf
 # dotenv environment variable files
 .env
 .env.development.local
