--- a/02-django/project/Dockerfile
+++ b/02-django/project/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9
+FROM python:latest
 
 WORKDIR /usr/src/app
 
@@ -6,6 +6,8 @@ COPY . .
 
 RUN pip install -r req.txt
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+RUN python manage.py collectstatic --noinput
+
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "S100Registry.wsgi:application"]
 
 EXPOSE 8000
