--- a/03-react/front-end/package.json
+++ b/03-react/front-end/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "crypto-browserify": "^3.12.1",
+    "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
